<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.xavier.tp1.Menu">

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="@dimen/guideLine" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStartSmall"
            android:layout_marginTop="@dimen/marginTopSmall"
            android:text="@string/menu_txt_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button"
            android:layout_width="@dimen/menu_btn_width"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginEndSmall"
            android:layout_marginStart="@dimen/marginStartSmall"
            android:layout_marginTop="@dimen/marginTopSmall"
            android:text="@string/menu_btn_1"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/button2"
            android:layout_width="@dimen/menu_btn_width"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginEndSmall"
            android:layout_marginStart="@dimen/marginStartSmall"
            android:layout_marginTop="@dimen/marginTopSmall"
            android:text="@string/menu_btn_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/button3"
            android:layout_width="@dimen/menu_btn_width"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginEndSmall"
            android:layout_marginStart="@dimen/marginStartSmall"
            android:layout_marginTop="@dimen/marginTopSmall"
            android:text="@string/menu_btn_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStartSmall"
            android:layout_marginTop="@dimen/marginTopSmall"
            android:text="@string/menu_txt_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button4"
            android:layout_width="@dimen/menu_btn_width"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginEndSmall"
            android:layout_marginStart="@dimen/marginStartSmall"
            android:layout_marginTop="@dimen/marginTopSmall"
            android:text="@string/menu_btn_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>