<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.xavier.tp1.Question">

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="@dimen/width_null"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="@dimen/guideLine" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="@dimen/width_null"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginEndSmall"
            android:layout_marginStart="@dimen/marginStartSmall"
            android:layout_marginTop="@dimen/marginTopSmall"
            android:text="@string/question_text_equipe"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="@dimen/width_null"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginEndSmall"
            android:layout_marginStart="@dimen/marginStartSmall"
            android:layout_marginTop="@dimen/marginTopSmall"
            android:text="@string/question_text_vie"
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="@dimen/width_null"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginEndSmall"
            android:layout_marginStart="@dimen/marginStartSmall"
            android:layout_marginTop="@dimen/marginTopSmall"
            android:text="@string/question_text_joueur"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="@dimen/width_null"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginEndSmall"
            android:layout_marginStart="@dimen/marginStartSmall"
            android:layout_marginTop="@dimen/marginTopSmall"
            android:text="@string/question_text_score"
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="@dimen/width_null"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginEndSmall"
            android:layout_marginStart="@dimen/marginStartSmall"
            android:layout_marginTop="@dimen/marginTopHigh"
            android:text="@string/question_text_question"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/width_null"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginEndSmall"
            android:layout_marginStart="@dimen/marginStartSmall"
            android:layout_marginTop="@dimen/marginTopSmall"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="@dimen/width_null"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginEndSmall"
            android:layout_marginStart="@dimen/marginStartSmall"
            android:layout_marginTop="@dimen/marginTopHigh"
            android:text="@string/question_text_valeur"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="@dimen/width_null"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginEndSmall"
            android:layout_marginStart="@dimen/marginStartSmall"
            android:layout_marginTop="@dimen/marginTopSmall"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <Button
            android:id="@+id/button5"
            android:layout_width="@dimen/width_null"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginEndSmall"
            android:layout_marginStart="@dimen/marginStartSmall"
            android:layout_marginTop="@dimen/marginTopSmall"
            android:text="@string/question_btn_1"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" />

        <Button
            android:id="@+id/button6"
            android:layout_width="@dimen/width_null"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginEndSmall"
            android:layout_marginStart="@dimen/marginStartSmall"
            android:layout_marginTop="@dimen/marginTopSmall"
            android:text="@string/question_btn_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" />

        <Button
            android:id="@+id/button7"
            android:layout_width="@dimen/width_null"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginEndSmall"
            android:layout_marginStart="@dimen/marginStartSmall"
            android:layout_marginTop="@dimen/marginTopSmall"
            android:text="@string/question_btn_3"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button5" />

        <Button
            android:id="@+id/button8"
            android:layout_width="@dimen/width_null"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginEndSmall"
            android:layout_marginStart="@dimen/marginStartSmall"
            android:layout_marginTop="@dimen/marginTopSmall"
            android:text="@string/question_btn_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/button6" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>